<resources>
  <string name="app_name">MVI Demo</string>
  <string name="action_settings">Settings</string>
  <string name="copyright">Copyright by  Binh.Nguyen</string>
  <string name="binh_email">nnbinh0301@gmail.com</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="confirm_password">Confirm Password</string>
  <string name="SignIn">SIGN IN</string>
  <string name="sign_in_by_email">SIGN IN WITH GOOGLE</string>
  <string name="welcome">Welcome</string>
  <string name="sign_in_to_continue">Sign in to continue</string>
  <string name="sign_in_successful">Sign In Successful.</string>
  <string name="sign_in_fail">Sign In fail.</string>
  <string name="not_member">Not a member?</string>
  <string name="sign_up_now">Sign up now</string>
  <string name="sign_up">Sign Up</string>
  <string name="register">Register</string>
  <string name="ex_name">Ex: Nguyen Van An (require)</string>
  <string name="what_your_full_name">What your full name?</string>
  <string name="what_your_phone_number">What your phone number?</string>
  <string name="what_your_birthday">What your birthday?</string>
  <string name="ex_birthday">23/03/1989</string>
  <string name="ex_phone_number">0921456788</string>
  <string name="what_your_gender">What your gender?</string>
  <string name="where_are_you">Where are you?</string>
  <string name="save">Save</string>
  <string name="profile">Your Profile</string>
  <string name="ex_address">Ho Chi Minh</string>
  <string name="confirm_pass_is_not_same_as_pass">Please check confirm password.</string>
  <string name="this_email_has_been_used">This email has been used. Please use other email.</string>
  <string name="your_email_is_incorrect">Your email is incorrect. Please check it.</string>
  <string name="your_email_not_register">Your email has not to register on our system.</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="sign_in">Sign In</string>
  <string name="male">Male</string>
  <string name="female">Female</string>
  <string name="ok">OK</string>
  <string name="cancel">Cancel</string>
  <string name="unexpected_problem">There was an unexpected problem.</string>
  <string name="could_not_create_unique_node">Could not crete unique node.</string>
  <string name="pls_fill_full_name">Please fill your full name.</string>
  <string name="pls_fill_password">Please fill password.</string>
  <string name="password_incorrect">Password is incorrect.</string>
  <string name="dashboard">Dashboard</string>
  <string name="transactions">Transactions</string>
  <string name="notifications">Notifications</string>
    <string name="online">Online</string>
  <string name="offline">Offline</string>
</resources>
