<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
  <data>

  </data>
  <LinearLayout
      style="@style/AppTheme.LayoutItem"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:paddingTop="@dimen/space_32"
      android:paddingBottom="@dimen/space_32"
      >
    <TextView
        style="@style/AppTheme.TextView.Header.H4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_32"
        android:text="@string/profile"
        android:textColor="@color/colorPrimaryDark"
        />
    <TextView
        style="@style/AppTheme.TextView.Header.H7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_your_full_name"
        />
    <EditText
        android:id="@+id/edt_full_name"
        style="@style/AppTheme.EditText.Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ex_name"
        />
    <TextView
        style="@style/AppTheme.TextView.Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_24"
        android:text="@string/what_your_phone_number"
        />
    <EditText
        android:id="@+id/edt_phone_number"
        style="@style/AppTheme.EditText.Phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ex_phone_number"
        />
    <TextView
        style="@style/AppTheme.TextView.Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_24"
        android:text="@string/what_your_birthday"
        />
    <TextView
        android:id="@+id/tv_birthday"
        style="@style/AppTheme.TextView.GrayBorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ex_birthday"
        />
    <TextView
        style="@style/AppTheme.TextView.Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_24"
        android:text="@string/what_your_gender"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
      <RadioButton
          android:id="@+id/rad_male"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/male"
          android:textSize="@dimen/text_14"
          />
      <RadioButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/space_32"
          android:text="@string/female"
          android:textSize="@dimen/text_14"
          />
    </RadioGroup>
    <TextView
        style="@style/AppTheme.TextView.Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_24"
        android:text="@string/where_are_you"
        />
    <EditText
        android:id="@+id/edt_address"
        style="@style/AppTheme.EditText.Address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ex_address"
        android:singleLine="true"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <Button
        android:id="@+id/btn_save"
        style="@style/AppTheme.Button.PrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_32"
        android:text="@string/save"
        />
  </LinearLayout>
</layout>