<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_sign_in_up"
    app:startDestination="@id/fragment_sign_in"
    tools:ignore="UnusedNavigation">
  <fragment
      android:id="@+id/fragment_sign_in"
      android:name="com.nnbinh.mvidemo.screens.signInUp.SignInFragment"
      android:label="@string/welcome"
      tools:layout="@layout/fragment_sign_in">
    <action
        android:id="@+id/action_fragment_sign_in_to_fragment_sign_up"
        app:destination="@id/fragment_sign_up"
        app:enterAnim="@anim/slide_in_right"
        app:exitAnim="@anim/slide_out_left"
        app:popEnterAnim="@anim/slide_in_left"
        app:popExitAnim="@anim/slide_out_right" />
  </fragment>

  <fragment
      android:id="@+id/fragment_sign_up"
      android:name="com.nnbinh.mvidemo.screens.signInUp.SignUpFragment"
      android:label="@string/sign_up"
      tools:layout="@layout/fragment_sign_up">
    <action
        android:id="@+id/action_fragment_sign_up_to_fragment_create_profile"
        app:destination="@id/fragment_create_profile"
        app:enterAnim="@anim/slide_in_right"
        app:exitAnim="@anim/slide_out_left"
        app:popEnterAnim="@anim/slide_in_left"
        app:popExitAnim="@anim/slide_out_right" />
  </fragment>

  <fragment
      android:id="@+id/fragment_create_profile"
      android:name="com.nnbinh.mvidemo.screens.signInUp.CreateProfileFragment"
      android:label="@string/profile"
      tools:layout="@layout/fragment_create_profile" />
</navigation>