<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
  <data>
    <import type="android.text.TextUtils" />
  </data>
  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/colorBackground"
      >
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_ver_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lout_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"
        />

    <TextView
        android:id="@+id/tv_header"
        style="@style/AppTheme.TextView.Header.H3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_24"
        android:text="@string/welcome"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lout_top"
        />

    <TextView
        android:id="@+id/tv_sub_header"
        style="@style/AppTheme.TextView.Header.H4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/f_lato_light"
        android:text="@string/sign_in_to_continue"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="@id/tv_header"
        app:layout_constraintTop_toBottomOf="@id/tv_header"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lout_email"
        style="@style/AppTheme.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_24"
        android:layout_marginTop="@dimen/space_32"
        android:layout_marginEnd="@dimen/space_24"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sub_header"
        >

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/edt_email"
          style="@style/AppTheme.TextInputEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textEmailAddress"
          android:maxLength="@integer/max_input_email"
          android:text="nnbinh0301@gmail.com"
          />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lout_password"
        style="@style/AppTheme.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_24"
        android:layout_marginTop="@dimen/space_16"
        android:layout_marginEnd="@dimen/space_24"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lout_email"
        >

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/edt_password"
          style="@style/AppTheme.TextInputEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:maxLength="@integer/max_input_password"
          android:text="123456"
          />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_signin"
        style="@style/AppTheme.Button.PrimaryDark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_32"
        android:text="@string/SignIn"
        app:layout_constraintEnd_toEndOf="@+id/lout_email"
        app:layout_constraintStart_toStartOf="@+id/lout_email"
        app:layout_constraintTop_toBottomOf="@id/lout_password"
        />

    <TextView
        android:id="@+id/txt_not_member"
        style="@style/AppTheme.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16"
        android:onClick="signUp"
        android:text="@string/not_member"
        android:textColor="@color/colorGreyDark"
        app:layout_constraintEnd_toStartOf="@id/line_ver_center"
        app:layout_constraintTop_toBottomOf="@id/btn_signin"
        />

    <TextView
        android:id="@+id/txt_sign_up"
        style="@style/AppTheme.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_4"
        android:onClick="signUp"
        android:text="@string/sign_up_now"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@id/txt_not_member"
        app:layout_constraintStart_toEndOf="@id/txt_not_member"
        app:layout_constraintTop_toTopOf="@id/txt_not_member"
        />
    <Button
        android:id="@+id/btn_signin_gg"
        style="@style/AppTheme.Button.Google"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_32"
        android:layout_marginBottom="@dimen/space_32"
        android:onClick="signInByGoogle"
        android:text="@string/sign_in_by_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/lout_email"
        app:layout_constraintStart_toStartOf="@+id/lout_email"
        />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>